--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rustbot"
+name = "Jackthebox"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,3 +10,6 @@ enigo = "0.1.3"
 captrs = "0.3.1"
 shuteye = "0.3.3"
 rodio = "0.20.1"
+
+[profile.dev]
+opt-level = 1 # Overrides the default of 0
